docs: update descriptions for erc-20 and erc-721 helpers

--- a/docs/sdk/erc-721.md
+++ b/docs/sdk/erc-721.md
@@ -5,6 +5,7 @@ sidebar_label: ERC-721
 ---
 
 # TrueWallet SDK ERC-721 helper
+Helper class to call default ERC-721 tokens functions
 
 ## Methods
 ### balanceOf
@@ -13,7 +14,7 @@ Count all NFTs assigned to an owner
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 
 returns \{Promise\<string\>\}
 
@@ -31,7 +32,7 @@ Get the approved address for a single NFT
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address  |
 | tokenId | number | True | ID of the NFT |
 
 returns \{Promise\<string\>\}
@@ -52,7 +53,7 @@ Query if an address is an authorized operator for another address
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 | owner | string | True | The address that owns the NFTs |
 | operator | string | True | The address that acts on behalf of the owner |
 
@@ -74,7 +75,7 @@ A descriptive name for a collection of NFTs in this contract
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 
 returns \{Promise\<string\>\}
 
@@ -92,7 +93,7 @@ An abbreviated name for NFTs in this contract
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 
 returns \{Promise\<string\>\}
 
@@ -110,7 +111,7 @@ A distinct Uniform Resource Identifier (URI) for a given asset.
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 | tokenId | number | True | ID of the NFT |
 
 returns \{Promise\<string\>\}
@@ -130,7 +131,7 @@ Find the owner of an NFT
 params:
 | Parameter    | Type   | Required | Value                             |
 | ------------ | ------ | -------- | --------------------------------- |
-| tokenAddress | string | True | Address of the ERC-721 NFT token contract |
+| contractAddress | string | True | Address of the ERC-721 NFT token contract address |
 | tokenId | number | True | ID of the NFT |
 
 returns \{Promise\<string\>\}
@@ -163,12 +164,12 @@ const wallet = await initTrueWallet({...});
 const nftAddress = '0x358B99777Cfe2CdcFd2FB094AcE6523f90d89348';
 const tokenId = 123;
 const approveToAddress = '0x...';
-const operationResponse = await wallet.erc721.approve({to: approveToAddress, tokenAddress: nftAddress, tokenId});
+const operationResponse = await wallet.erc721.approve({to: approveToAddress, contractAddress: nftAddress, tokenId});
 await operationResponse.wait(); // wait for the transaction to be mined
 ```
 
 ### setApprovalForAll
-Enable or disable approval for a third party ("operator") to manage all of `msg.sender`'s assets
+Enable or disable approval for a third party ("operator") to manage all the current wallet assets
 
 params:
 | Parameter    | Type   | Required | Value                             |
@@ -184,7 +185,7 @@ import {initTrueWallet} from '@truewallet/sdk';
 const wallet = await initTrueWallet({...});
 const nftAddress = '0x358B99777Cfe2CdcFd2FB094AcE6523f90d89348';
 const operator = '0x...';
-const operationResponse = await wallet.erc721.setApprovalForAll({operator, tokenAddress: nftAddress, approved: true});
+const operationResponse = await wallet.erc721.setApprovalForAll({operator, contractAddress: nftAddress, approved: true});
 await operationResponse.wait(); // wait for the transaction to be mined
 ```
 
@@ -208,7 +209,7 @@ const wallet = await initTrueWallet({...});
 const nftAddress = '0x358B99777Cfe2CdcFd2FB094AcE6523f90d89348';
 const tokenId = 123;
 const toAddress = '0x...';
-const operationResponse = await wallet.erc721.transferFrom({from: wallet.address, to: toAddress, tokenAddress: nftAddress, tokenId});
+const operationResponse = await wallet.erc721.transferFrom({from: wallet.address, to: toAddress, contractAddress: nftAddress, tokenId});
 await operationResponse.wait(); // wait for the transaction to be mined
 ```
 
@@ -231,6 +232,6 @@ const wallet = await initTrueWallet({...});
 const nftAddress = '0x358B99777Cfe2CdcFd2FB094AcE6523f90d89348';
 const tokenId = 123;
 const toAddress = '0x...';
-const operationResponse = await wallet.erc721.safeTransferFrom({from: wallet.address, to: toAddress, tokenAddress: nftAddress, tokenId});
+const operationResponse = await wallet.erc721.safeTransferFrom({from: wallet.address, to: toAddress, contractAddress: nftAddress, tokenId});
 await operationResponse.wait(); // wait for the transaction to be mined
 ```
