update balanceOfBatch in erc-1155

--- a/docs/sdk/erc-1155.md
+++ b/docs/sdk/erc-1155.md
@@ -100,7 +100,7 @@ params:
 | owners | string[] | True | The addresses of the token holders |
 | ids | number[] | True | IDs of the NFTs |
 
-returns \{Promise\<ProxyConstructor\>\}
+returns \{Promise\<bigint[]\>\}
 
 ```typescript
 import {initTrueWallet} from '@truewallet/sdk';
